--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,25 @@
+/* Resetting browser CSS */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Widespread Styles */
 body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* Header Styles */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +36,8 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* Nav bar Styles */
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +45,16 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/* Hero Styles */
 .hero {
     height: 800px;
     width: 100%;
@@ -75,6 +80,7 @@ p {
     margin-left: 20px;
 }
 
+/* Aside Styles */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +140,7 @@ p {
     max-width: 150px;
 }
 
+/* Section Styles */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,6 +195,7 @@ p {
     font-size: 36px;
 }
 
+/* Footer Styles */
 .footer {
     padding: 30px;
     clear: both;
